--- a/index.html
+++ b/index.html
@@ -4,126 +4,129 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+      <title>Document</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
         integrity="sha512-wpPYUAdjBVSE4KJnH1VR1HeZfpl1ub8YT/NKx4PuQ5NmX2tKuGu6U/JRp5y+Y8XG2tV+wKQpNHVUX03MfMFn9Q=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" href="./css/styles.css" />
-    
-    <title>Document</title>
 </head>
 <body>
     <!-- Шапка сайта -->
- <header>
-     <nav>
-            <a href="./index.html">Web<span>Studio</span></a>
-         <ul>
-            <li>
-                <a href="./index.html">Студия</a>
+<header class="header">
+    <nav class="header-navigation">
+        <a href="./index.html" class="header-logo link">Web<span class="header-logo-part">Studio</span></a>
+        <ul class="header-list list">
+            <li class="header-item">
+                <a class="header-link link" href="./index.html">Студия</a>
             </li>
-            <li>
-                <a href="./portfolio.html">Портфолио</a>
+            <li class="header-item">
+                <a class="header-link link" href="./portfolio.html">Портфолио</a>
             </li>
-            <li>
-                <a href="">Контакты</a>
+            <li class="header-item">
+                <a class="header-link link" href="">Контакты</a>
             </li>
-         </ul>
-     </nav>
-        <div>
-             <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-             <a href="tel:+380961111111">+38 096 111 11 11</a>
-        </div>
- </header>
+        </ul>
+    </nav>
+    <div class="header-right link">
+        <a class="header-mail link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+        <a class="header-tel link" href="tel:+380961111111">+38 096 111 11 11</a>
+    </div>
+</header>
  <!-- Герой -->
  <main>
      <div>
-        <section>
-            <h1>Эффективные решения <br> для вашего бизнеса</h1>
-            <button type="button">Заказать услугу</button>
+        <section class="hero">
+            <h1 class="hero-title">Эффективные решения <br> для вашего бизнеса</h1>
+            <button type="button" class="hero-button">Заказать услугу</button>
         </section>
     </div>
     <!-- Особенности -->
     <div>
-        <section>
-            <h2>Наши особенности</h2>
-            <ul>
-                <li>
-                    <h3>Внимание к деталям</h3>
-                    <p>Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
+        <section class="hang">
+            <h2 class="hang-main-title">Наши особенности</h2>
+            <ul class="hang-list list">
+                <li class="hang-item">
+                    <h3 class="hang-secondary-title">Внимание к деталям</h3>
+                    <p class="hang-text">Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
                 </li>
-                <li>
-                    <h3>Пунктуальность</h3>
-                    <p>Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
+                <li class="hang-item">
+                    <h3 class="hang-secondary-title">Пунктуальность</h3>
+                    <p class="hang-text">Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
                 </li>
-                <li>
-                    <h3>Планирование</h3>
-                    <p>Равным образом консультация с широким активом в значительной степени обуславливает.</p>
+                <li class="hang-item">
+                    <h3 class="hang-secondary-title">Планирование</h3>
+                    <p class="hang-text">Равным образом консультация с широким активом в значительной степени обуславливает.</p>
                 </li>
-                <li>
-                    <h3>Современные технологии</h3>
-                    <p>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
+                <li class="hang-item">
+                    <h3 class="hang-secondary-title">Современные технологии</h3>
+                    <p class="hang-text">Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
                 </li>
             </ul>
         </section>
     </div>
     <!-- Наше направление -->
     <div>
-        <section>
-            <h2>Чем мы занимаемся</h2>
-            <ul>
-                <li>
-                    <a href=""><img src="./images/box/box-1.jpg" alt="Человек набирает код" width="370" height="294"></a>
+        <section class="route">
+            <h2 class="route-title">Чем мы занимаемся</h2>
+            <ul class="route-list list">
+                <li class="route-item">
+                    <a href="" class="route-link"><img src="./images/box/box-1.jpg" alt="Человек набирает код" width="370" height="294"></a>
                 </li>
-                <li>
-                    <a href=""><img src="./images/box/box-2.jpg" alt="Человек тестирует телефон" width="370" height="294"></a>
+                <li class="route-item">
+                    <a href="" class="route-link"><img src="./images/box/box-2.jpg" alt="Человек тестирует телефон" width="370" height="294"></a>
                 </li>
-                <li>
-                    <a href=""><img src="./images/box/box-3.jpg" alt="Человек проверяет диаграмму на планшете" width="370" height="294"></a>
+                <li class="route-item">
+                    <a href="" class="route-link"><img src="./images/box/box-3.jpg" alt="Человек проверяет диаграмму на планшете" width="370" height="294"></a>
                 </li>
             </ul>
         </section>
     </div>
     <!-- Команда -->
     <div>
-        <section>
-            <h2>Наша команда</h2>
-            <ul>
-                <li>
-                    <img src="./images/team/igor.jpg" alt="Мужчина в очках" width="270" height="260">
-                    <h3>Игорь Демьяненко</h3>
-                    <p lang="en">Product Designer</p>
+        <section class="team">
+            <h2 class="team-main-title">Наша команда</h2>
+            <ul class="team-list list">
+                <li class="team-item">
+                    <img src="./images/team/igor.jpg" alt="Мужчина в очках" class="team-foto" width="270" height="260">
+                    <h3 class="team-secondary-title">Игорь Демьяненко</h3>
+                    <p lang="en" class="team-text">Product Designer</p>
                 </li>
-                <li>
-                    <img src="./images/team/olga.jpg" alt="Девушка в очках" width="270" height="260">
-                    <h3>Ольга Репина</h3>
-                    <p lang="en">Frontend Developer</p>
+                <li class="team-item">
+                    <img src="./images/team/olga.jpg" alt="Девушка в очках" class="team-foto" width="270" height="260">
+                    <h3 class="team-secondary-title">Ольга Репина</h3>
+                    <p lang="en" class="team-text">Frontend Developer</p>
                 </li>
-                <li>
-                    <img src="./images/team/nikolay.jpg" alt="Мужчина в рубашке" width="270" height="260">
-                    <h3>Николай Тарасов</h3>
-                    <p lang="en">Marketing</p>
+                <li class="team-item">
+                    <img src="./images/team/nikolay.jpg" alt="Мужчина в рубашке" class="team-foto" width="270" height="260">
+                    <h3 class="team-secondary-title">Николай Тарасов</h3>
+                    <p lang="en" class="team-text">Marketing</p>
                 </li>
-                <li>
-                    <img src="./images/team/michael.jpg" alt="Мужчина в футболке" width="270" height="260">
-                    <h3>Михаил Ермаков</h3>
-                    <p lang="en">UI Designer</p>
+                <li class="team-item">
+                    <img src="./images/team/michael.jpg" alt="Мужчина в футболке" class="team-foto" width="270" height="260">
+                    <h3 class="team-secondary-title">Михаил Ермаков</h3>
+                    <p lang="en" class="team-text">UI Designer</p>
                 </li>
             </ul>
         </section>
     </div>
 </main>
 <!-- Контакты -->
-<footer>
-    <a href="">Web<span>Studio</span></a>
-    <address>
-        <ul>
-            <li>
-                <a href="">г. Киев, пр-т Леси Украинки, 26</a>
+<footer class="footer">
+    <a href="./index.html" class="footer-logo link">Web<span class="footer-logo-part">Studio</span></a>
+    <address class="contact-address">
+        <ul class="contact-address-list list">
+            <li class="contact-address-item">
+                <a href="" class="contact-address-map link">г. Киев, пр-т Леси Украинки, 26</a>
             </li>
-            <li>
-                <a href="mailto:info@example.com">info@example.com</a> 
+            <li class="contact-address-item">
+                <a href="mailto:info@example.com" class="contact-address-mail link">info@example.com</a> 
             </li>
-            <li>
-                <a href="tel:+380991111111">+38 099 111 11 11</a>
+            <li class="contact-address-item">
+                <a href="tel:+380991111111" class="contact-address-tel link">+38 099 111 11 11</a>
             </li>
         </ul>
     </address>
