Убирает точки в портфолио

--- a/portfolio.html
+++ b/portfolio.html
@@ -41,7 +41,7 @@
         <div>
         <section class="button-projects">
             <h1 class="button-projects-title">Наши проекты</h1>
-            <ul>
+            <ul class="button-projects-list list">
                 <li><button type="button" class="button-projects-btn">Все</button></li>
                 <li><button type="button" class="button-projects-btn">Веб-сайты</button></li>
                 <li><button type="button" class="button-projects-btn">Приложения</button></li>
